snapshots/serde/serde/src/integer128.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
{
  "name": null,
  "start_line": 1,
  "end_line": 82,
  "kind": "unit",
  "spaces": [],
  "metrics": {
    "nargs": {
      "total_functions": 0.0,
      "total_closures": 0.0,
      "average_functions": 0.0,
      "average_closures": 0.0,
      "total": 0.0,
      "average": 0.0,
      "functions_min": 0.0,
      "functions_max": 0.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "nexits": {
      "sum": 0.0,
      "average": null,
      "min": 0.0,
      "max": 0.0
    },
    "cognitive": {
      "sum": 0.0,
      "average": null,
      "min": 0.0,
      "max": 0.0
    },
    "cyclomatic": {
      "sum": 1.0,
      "average": 1.0,
      "min": 1.0,
      "max": 1.0
    },
    "halstead": {
      "n1": 6.0,
      "N1": 25.0,
      "n2": 7.0,
      "N2": 11.0,
      "length": 36.0,
      "estimated_program_length": 35.161259458730164,
      "purity_ratio": 0.9767016516313934,
      "vocabulary": 13.0,
      "volume": 133.21582985307933,
      "difficulty": 4.714285714285714,
      "level": 0.21212121212121213,
      "effort": 628.0174835930883,
      "time": 34.88986019961602,
      "bugs": 0.02444517973902524
    },
    "loc": {
      "sloc": 82.0,
      "ploc": 13.0,
      "lloc": 0.0,
      "cloc": 68.0,
      "blank": 1.0,
      "sloc_average": 82.0,
      "ploc_average": 13.0,
      "lloc_average": 0.0,
      "cloc_average": 68.0,
      "blank_average": 1.0,
      "sloc_min": 82.0,
      "sloc_max": 82.0,
      "cloc_min": 68.0,
      "cloc_max": 68.0,
      "ploc_min": 13.0,
      "ploc_max": 13.0,
      "lloc_min": 0.0,
      "lloc_max": 0.0,
      "blank_min": 1.0,
      "blank_max": 1.0
    },
    "nom": {
      "functions": 0.0,
      "closures": 0.0,
      "functions_average": 0.0,
      "closures_average": 0.0,
      "total": 0.0,
      "average": 0.0,
      "functions_min": 0.0,
      "functions_max": 0.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "mi": {
      "mi_original": 73.94290110663252,
      "mi_sei": 80.43909971562806,
      "mi_visual_studio": 43.24146263545761
    },
    "abc": {
      "assignments": 0.0,
      "branches": 0.0,
      "conditions": 0.0,
      "magnitude": 0.0,
      "assignments_average": 0.0,
      "branches_average": 0.0,
      "conditions_average": 0.0,
      "assignments_min": 0.0,
      "assignments_max": 0.0,
      "branches_min": 0.0,
      "branches_max": 0.0,
      "conditions_min": 0.0,
      "conditions_max": 0.0
    }
  }
}
