snapshots/serde/serde/src/lib.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 349
kind: unit
spaces: []
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 11
    N1: 380
    n2: 205
    N2: 604
    length: 984
    estimated_program_length: 1612.347
    purity_ratio: 1.639
    vocabulary: 216
    volume: 7630.809
    difficulty: 16.205
    level: 0.062
    effort: 123656.334
    time: 6869.796
    bugs: 0.827
  loc:
    sloc: 349
    ploc: 185
    lloc: 0
    cloc: 127
    blank: 38
    sloc_average: 349
    ploc_average: 185
    lloc_average: 0
    cloc_average: 127
    blank_average: 38
    sloc_min: 349
    sloc_max: 349
    cloc_min: 127
    cloc_max: 127
    ploc_min: 185
    ploc_max: 185
    lloc_min: 0
    lloc_max: 0
    blank_min: 38
    blank_max: 38
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 29.43
    mi_sei: 7.076
    mi_visual_studio: 17.211
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0

