snapshots/serde/serde/src/macros.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 236
kind: unit
spaces: []
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 18
    N1: 507
    n2: 68
    N2: 115
    length: 622
    estimated_program_length: 489.006
    purity_ratio: 0.786
    vocabulary: 86
    volume: 3997.137
    difficulty: 15.221
    level: 0.066
    effort: 60838.771
    time: 3379.932
    bugs: 0.516
  loc:
    sloc: 236
    ploc: 123
    lloc: 0
    cloc: 111
    blank: 2
    sloc_average: 236
    ploc_average: 123
    lloc_average: 0
    cloc_average: 111
    blank_average: 2
    sloc_min: 236
    sloc_max: 236
    cloc_min: 111
    cloc_max: 111
    ploc_min: 123
    ploc_max: 123
    lloc_min: 0
    lloc_max: 0
    blank_min: 2
    blank_max: 2
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 39.131
    mi_sei: 24.532
    mi_visual_studio: 22.883
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
