snapshots/serde/serde/src/std_error.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 48
kind: unit
spaces:
  - name: Error
    start_line: 43
    end_line: 48
    kind: trait
    spaces:
      - name: source
        start_line: 45
        end_line: 47
        kind: function
        spaces: []
        metrics:
          nargs:
            total_functions: 1
            total_closures: 0
            average_functions: 1
            average_closures: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 1
            average: 1
            min: 1
            max: 1
          cognitive:
            sum: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            average: 1
            min: 1
            max: 1
          halstead:
            n1: 8
            N1: 10
            n2: 4
            N2: 4
            length: 14
            estimated_program_length: 32
            purity_ratio: 2.286
            vocabulary: 12
            volume: 50.189
            difficulty: 4
            level: 0.25
            effort: 200.758
            time: 11.153
            bugs: 0.011
          loc:
            sloc: 3
            ploc: 3
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 132.61
            mi_sei: 115.717
            mi_visual_studio: 77.55
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        total_functions: 1
        total_closures: 0
        average_functions: 1
        average_closures: 0
        total: 1
        average: 1
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 1
        average: 1
        min: 0
        max: 1
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 2
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 8
        N1: 12
        n2: 4
        N2: 4
        length: 16
        estimated_program_length: 32
        purity_ratio: 2
        vocabulary: 12
        volume: 57.359
        difficulty: 4
        level: 0.25
        effort: 229.438
        time: 12.747
        bugs: 0.012
      loc:
        sloc: 6
        ploc: 5
        lloc: 0
        cloc: 1
        blank: 0
        sloc_average: 3
        ploc_average: 2.5
        lloc_average: 0
        cloc_average: 0.5
        blank_average: 0
        sloc_min: 3
        sloc_max: 3
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 120.457
        mi_sei: 127.842
        mi_visual_studio: 70.443
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 1
    total_closures: 0
    average_functions: 1
    average_closures: 0
    total: 1
    average: 1
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 1
    average: 1
    min: 0
    max: 1
  cognitive:
    sum: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 3
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 10
    N1: 15
    n2: 7
    N2: 7
    length: 22
    estimated_program_length: 52.871
    purity_ratio: 2.403
    vocabulary: 17
    volume: 89.924
    difficulty: 5
    level: 0.2
    effort: 449.621
    time: 24.979
    bugs: 0.02
  loc:
    sloc: 48
    ploc: 6
    lloc: 0
    cloc: 41
    blank: 1
    sloc_average: 16
    ploc_average: 2
    lloc_average: 0
    cloc_average: 13.667
    blank_average: 0.333
    sloc_min: 6
    sloc_max: 6
    cloc_min: 1
    cloc_max: 1
    ploc_min: 5
    ploc_max: 5
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 0
  nom:
    functions: 1
    closures: 0
    functions_average: 0.333
    closures_average: 0
    total: 1
    average: 0.333
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 84.202
    mi_sei: 95.6
    mi_visual_studio: 49.241
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0

